Fix gap in hamburger menu

--- a/_sass/custom/_header-fullscreen.scss
+++ b/_sass/custom/_header-fullscreen.scss
@@ -220,7 +220,7 @@ Primary Nav Trigger components
     -o-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
     width: 18px;
-    height: 2px;
+    height: 4px;
     background-color: $custom-brand-color-primary;
     -webkit-transition: background-color 0.3s;
     -moz-transition: background-color 0.3s;
